# rpi_cpp_helloworld

./: CMakeLists.txt  toolchain.cmake
src/: main.cpp
